--- a/index.html
+++ b/index.html
@@ -120,6 +120,44 @@
                 </div>
             </div>
         </div>
+        <div class="move-history">
+            <h3>Move History</h3>
+            <div class="history-entries">
+                <div class="history-entry">
+                    <div class="history-player">
+                        <div class="history-weapon empty"></div>
+                        <span class="history-damage"></span>
+                    </div>
+                    <div class="history-vs">vs</div>
+                    <div class="history-computer">
+                        <div class="history-weapon empty"></div>
+                        <span class="history-damage"></span>
+                    </div>
+                </div>
+                <div class="history-entry">
+                    <div class="history-player">
+                        <div class="history-weapon empty"></div>
+                        <span class="history-damage"></span>
+                    </div>
+                    <div class="history-vs">vs</div>
+                    <div class="history-computer">
+                        <div class="history-weapon empty"></div>
+                        <span class="history-damage"></span>
+                    </div>
+                </div>
+                <div class="history-entry">
+                    <div class="history-player">
+                        <div class="history-weapon empty"></div>
+                        <span class="history-damage"></span>
+                    </div>
+                    <div class="history-vs">vs</div>
+                    <div class="history-computer">
+                        <div class="history-weapon empty"></div>
+                        <span class="history-damage"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
         <div id="game-message" class="game-message instant">Choose your weapon!</div>
         <div class="weapons-grid">
             <button class="weapon-btn" data-weapon="1">
@@ -173,12 +211,12 @@
             <h3>Customize Game</h3>
             <p>Enter your preferred game settings:</p>
             <div class="custom-inputs">
-                <label for="custom-hp">Health Points (1-50):</label>
-                <input type="number" id="custom-hp" min="1" max="50" value="7">
-                <label for="custom-blackhole">Black Hole Uses (0-5):</label>
-                <input type="number" id="custom-blackhole" min="0" max="5" value="2">
-                <label for="custom-crown">Crown Uses (0-3):</label>
-                <input type="number" id="custom-crown" min="0" max="3" value="1">
+                <label for="custom-hp">Health Points (1-100):</label>
+                <input type="number" id="custom-hp" min="1" max="100" value="7">
+                <label for="custom-blackhole">Black Hole Uses (0-7):</label>
+                <input type="number" id="custom-blackhole" min="0" max="7" value="2">
+                <label for="custom-crown">Crown Uses (0-5):</label>
+                <input type="number" id="custom-crown" min="0" max="5" value="1">
             </div>
             <div class="dialog-buttons">
                 <button id="custom-confirm" class="dialog-btn confirm-btn">Confirm</button>
@@ -189,6 +227,7 @@
 
     <div id="rules-dialog" class="confirmation-dialog" style="display: none;">
         <div class="dialog-content rules-content">
+            <button id="rules-close-x" class="close-x-button">&times;</button>
             <div id="rules-content" class="rules-text"></div>
             <div class="dialog-buttons">
                 <button id="rules-close" class="dialog-btn cancel-btn">Close</button>
