--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 </head>
 <body>
     <div id="menu-container" class="menu-container">
+        <div class="language-selector">
+            <button class="language-btn" data-lang="en">
+                <img src="images/flags/united-states-flag.png" alt="English">
+            </button>
+            <button class="language-btn" data-lang="fr">
+                <img src="images/flags/french-flag.png" alt="Français">
+            </button>
+        </div>
         <h1>Magical Fight</h1>
         <div class="version-indicator">[Update 1.1]</div>
         <div class="difficulty-selection">
@@ -84,6 +92,14 @@
     </div>
 
     <div id="game-container" class="game-container" style="display: none;">
+        <div class="language-selector">
+            <button class="language-btn" data-lang="en">
+                <img src="images/flags/united-states-flag.png" alt="English">
+            </button>
+            <button class="language-btn" data-lang="fr">
+                <img src="images/flags/french-flag.png" alt="Français">
+            </button>
+        </div>
         <div class="difficulty-indicator">
             <span class="difficulty-label">Difficulty:</span>
             <span class="difficulty-value" data-difficulty="normal">Normal</span>
